# ctp-redis

./: CMakeLists.txt  main.cpp
redis/: Redis.cpp  Redis.h  score.h  utils.cpp  utils.h
tests/: redis.cpp  serdes.cpp
